--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,69 +1,71 @@
 <header id="header">
-    <h1><a href="{{site.baseurl}}index.html">{{site.title}}</a></h1><a href="#menu">Menu</a>
+  <h1><a href="{{site.baseurl}}index.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">{{site.title}}</a>
+  </h1><a href="#menu">Menu</a>
 </header>
 <nav id="menu">
-    <ul class="links">
-        {% for menu in site.menu %}
-        <li><a href="{{site.baseurl}}{{ menu.url | replace_first: '/'  }}" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">{{menu.name}}</a></li>
-        {% endfor %}
-    </ul>
-<!--     <ul class="actions vertical">
+  <ul class="links">
+    {% for menu in site.menu %}
+    <li><a href="{{site.baseurl}}{{ menu.url | replace_first: '/'  }}"
+        style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">{{menu.name}}</a></li>
+    {% endfor %}
+  </ul>
+  <!--     <ul class="actions vertical">
         <li><a href="#" class="button special fit" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Sign Up</a></li>
         <li><a href="#" class="button fit" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">Log In</a></li>
     </ul> -->
-    <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
+  <a href="#menu" class="close" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></a>
 </nav>
 <script>
-(function($) {
+  (function ($) {
     skel.breakpoints({
-        xlarge: '(max-width: 1680px)',
-        large: '(max-width: 1280px)',
-        medium: '(max-width: 980px)',
-        small: '(max-width: 736px)',
-        xsmall: '(max-width: 480px)'
+      xlarge: '(max-width: 1680px)',
+      large: '(max-width: 1280px)',
+      medium: '(max-width: 980px)',
+      small: '(max-width: 736px)',
+      xsmall: '(max-width: 480px)'
     });
-    $(function() {
-        var $window = $(window),
-            $body = $('body'),
-            $header = $('#header'),
-            $banner = $('#banner');
-        $body.addClass('is-loading');
-        $window.on('load', function() {
-            window.setTimeout(function() {
-                $body.removeClass('is-loading');
-            }, 100);
+    $(function () {
+      var $window = $(window),
+        $body = $('body'),
+        $header = $('#header'),
+        $banner = $('#banner');
+      $body.addClass('is-loading');
+      $window.on('load', function () {
+        window.setTimeout(function () {
+          $body.removeClass('is-loading');
+        }, 100);
+      });
+      $('form').placeholder();
+      skel.on('+medium -medium', function () {
+        $.prioritize('.important\\28 medium\\29', skel.breakpoint('medium').active);
+      });
+      if (skel.vars.IEVersion < 9) $header.removeClass('alt');
+      if ($banner.length > 0 && $header.hasClass('alt')) {
+        $window.on('resize', function () {
+          $window.trigger('scroll');
         });
-        $('form').placeholder();
-        skel.on('+medium -medium', function() {
-            $.prioritize('.important\\28 medium\\29', skel.breakpoint('medium').active);
+        $banner.scrollex({
+          bottom: $header.outerHeight(),
+          terminate: function () {
+            $header.removeClass('alt');
+          },
+          enter: function () {
+            $header.addClass('alt');
+          },
+          leave: function () {
+            $header.removeClass('alt');
+            $header.addClass('reveal');
+          }
         });
-        if (skel.vars.IEVersion < 9) $header.removeClass('alt');
-        if ($banner.length > 0 && $header.hasClass('alt')) {
-            $window.on('resize', function() {
-                $window.trigger('scroll');
-            });
-            $banner.scrollex({
-                bottom: $header.outerHeight(),
-                terminate: function() {
-                    $header.removeClass('alt');
-                },
-                enter: function() {
-                    $header.addClass('alt');
-                },
-                leave: function() {
-                    $header.removeClass('alt');
-                    $header.addClass('reveal');
-                }
-            });
-        }
-        $('#menu').append('<a href="#menu" class="close"></a>').appendTo($body).panel({
-            delay: 500,
-            hideOnClick: true,
-            hideOnSwipe: true,
-            resetScroll: true,
-            resetForms: true,
-            side: 'right'
-        });
+      }
+      $('#menu').append('<a href="#menu" class="close"></a>').appendTo($body).panel({
+        delay: 500,
+        hideOnClick: true,
+        hideOnSwipe: true,
+        resetScroll: true,
+        resetForms: true,
+        side: 'right'
+      });
     });
-})(jQuery);
+  })(jQuery);
 </script>
