title link change2

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-  <h1><a href="{{site.baseurl}}index.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">{{site.title}}</a>
+  <h1><a href="{{site.baseurl}}/index.html" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);">{{site.title}}</a>
   </h1><a href="#menu">Menu</a>
 </header>
 <nav id="menu">
