--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,8 +32,7 @@
       <a href='#' target="_blank">{{site.beian}}</a><br>
       {% endif %}
       {{site.anthor.name}} &copy; {% if site.since %} {{site.since}} - {% endif %} {{ 'now' | date: "%Y" }} Portfolio By
-      <a href='https://github.com/BAKCHEONGKYUNG' target="_blank">Jekyll</a> | Theme - <a
-        href="https://github.com/dotos/jekyll-machine" target="_blank">Machine</a>.
+      <a href='https://github.com/BAKCHEONGKYUNG' target="_blank">BAKCHEONGKYUNG</a>.
     </p>
   </div>
 </footer>
