--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,9 +16,9 @@
       {% endfor %}
     </ul>
     <ul class="contact">
-      <li>12345 Somewhere Road</li>
-      <li>Nashville, TN 00000</li>
-      <li>(000) 000-0000</li>
+      <li>박청경-Portfolio</li>
+      <li>010-8778-7018</li>
+      <li>draw.ch.b@gmail.com</li>
     </ul>
     <ul class="links">
       <li><a href="{{site.baseurl}}index.html">FAQ</a></li>
