--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if site.disqus_shortname %}
+<!-- {% if site.disqus_shortname %}
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = '{{ site.disqus_shortname }}'; // required: replace example with your forum shortname
@@ -26,4 +26,4 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
-
+ -->
