--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,8 @@ layout: base
       {% endif %}
       <!-- •   -->
       {% for tagitem in page.tags %}
-      &nbsp;<a href="{{site.baseurl}}tags/#{{tagitem}}">{{tagitem}}</a>
+      &nbsp;
+      <a href="{{site.baseurl}}tags/#{{tagitem}}">{{tagitem}}</a>
       {% endfor %}
     </p>
   </header>
