favicon, images add

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,5 +28,5 @@
   {% endif %}
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-  <link rel="shortcut icon" type="icon" href="/images/bookmark-regular-_1_.ico">
+  <link rel="shortcut icon" type="icon" href="/images/open-graph_S.ico">
 </head>
