--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,13 @@
   <meta property="og:image" content="{{ site.url }}/images/open-graph_L.png" />
   <meta property="og:url" content="{{ site.url }}" />
 
+  <!-- Open Graph (Twitter) -->
+  <!-- card종류, summary, photo, player -->
+  <meta name="twitter:card" content="Summary" />
+  <meta name="twitter:title" content="노력으로 발전하는 개발자" />
+  <meta name="twitter:description" content="박청경. Bak Cheong-Kyung" />
+  <meta name="twitter:image" content="{{ site.url }}/images/open-graph_S.png" />
+  <meta name="twitter:url" content="{{ site.url }}" />
 
   <!--[if lte IE 8]><script src="{{ "/js/html5shiv.js" | prepend: site.baseurl }}"></script><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="{{ "/css/ie9.css" | prepend: site.baseurl }}" /><![endif]-->
